Oct 13, 2002: Alex Burger <alex@fragit_dot_net>
- find_game_dir fixes:  Allow symlinks, use const
- Minor fix to ut_exec if there are no custom arguments

Oct 13, 2002: Jordi Mallach <jordi@sindominio.net>
- add redial.c to POTFILES.
- updated Catalan and Spanish translations.

Oct 13, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use server_clist_set_list in server_clist_build_filtered. It's actually
  faster to rebuild the displayed server list from scratch than to determine
  which servers have to be deleted or added.
- when deleting last server from favorites, do not display it any longer
- replace unsigned char type by enum server_type type
- grey out delete button for masters != favorites
- comment out unused redial code
- rename "Delete" -> "Remove from Favorites"
- update german translation
- remove empty lines for unconfigures games in statistics dialog

Oct 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- cleaned up get_custom_arguments
- custom_arg_count no longer neccessary
- suggest function for game commands
- show only configured games by default

Oct 11, 2002: Alex Burger <alex@fragit_dot_net>
- Modified q3_exec to call find_game_dir using quake3_data_dir
- Added NULL checks to find_game_dir

Oct 11, 2002: Alex Burger <alex@fragit_dot_net>
- Added function get_custom_arguments.  Used by ut_exec to pass user
  defined command line arguments to UT when launching.  Currently does 
  not have a GUI front end. To use, add something like the following
  to the [Game: UN] section in ~/.qf/config:

  custom_arg0=TacticalOps, -ini=TacticalOps.ini
  custom_arg1=SFTeamDM, -ini=StrikeForce.ini -userini=SFUser.ini
  custom_arg_count=2

  For UT, the 'gametype' server variable is compared with the entries
  in the config file above.  If there is a match, the arguments are 
  appended.

  For UT, the argument is appended to the IP address so you could 
  specify additional options such as ?Name=Alex etc.  If you want to